INT-3786, INT-3463: Fixed alignment issues with the comparison report select multi 'added list' so that the delete images line up in IE

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ div.mr_ajax_table_forceajax {
 
 /* mr_html_filter styles */
 .mr_html_filter .selectmultiplus.addedlist {
-    width: 250px;
+    width: 350px;
     min-height: 20px;
     max-height: 200px;
     overflow: auto;
@@ -65,6 +65,10 @@ div.mr_ajax_table_forceajax {
 
 .mr_html_filter .selectmultiplusitem {
     padding-bottom: 4px;
+}
+
+.ie .mr_html_filter .selectmultiplusitem {
+    padding-bottom: 6px;
 }
 
 .mr_html_filter .selectmultiplusitem div.deletebtn {
